# robot_behavior

./: CHANGELOG.md  Cargo.toml  README.md  README_zh.md  build.rs  robot_behavior.ipy  robot_behavior.pyi
.github/workflows/: maturin-ci.yml
examples/: to_py.rs
src/: arm.rs  exception.rs  exrobot.rs  ffi.rs  lib.rs  load.rs  once.rs  physics_engine.rs  realtime.rs  renderer.rs  robot.rs  types.rs  utils.rs  world.rs
src/ffi/: mod.rs  to_c.rs  to_cxx.rs  to_py.rs
src/robot/: arm.rs  basic.rs  dh.rs  kinematics_dynamatics.rs  types.rs
src/utils/: inverse.rs  mod.rs  once.rs  path_generate.rs  types.rs
tests/: kine.rs
