[package]
name = "robot_behavior"
version = "0.2.0"
edition = "2024"
authors = ["Yixing <yanjizhou312@163.com>"]
readme = "README.md"
repository = "https://github.com/Robot-Exp-Platform/robot_behavior"
license = "Apache-2.0"
description = "a library for robot common behavior"

[dependencies]
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_with = "3.12"
serde_json = "1.0"
thiserror = "2.0"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
pyo3 = "*"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
plotters = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winbase"] }
plotters = "0.3"
