[package]
name = "robot_behavior"
version = "0.3.9"
edition = "2024"
authors = ["Yixing <yanjizhou312@163.com>"]
readme = "README.md"
repository = "https://github.com/Robot-Exp-Platform/robot_behavior"
license = "Apache-2.0"
description = "a library for robot common behavior"

[profile.test]
opt-level = 3


[dependencies]
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_with = "3.12"
serde_json = "1.0"
thiserror = "2.0"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
pyo3 = { version = "0.24", optional = true, features = [
    "extension-module",
    "multiple-pymethods",
] }
paste = "1.0"
pipe-trait = "0.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
plotters = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winbase"] }
plotters = "0.3"

[features]
default = []
ffi = []
to_c = ["ffi"]
to_py = ["ffi", "pyo3"]
