[package]
name = "robot_behavior"
version = "0.5.2"
edition = "2024"
authors = ["Yixing <yanjizhou312@163.com>"]
readme = "README.md"
repository = "https://github.com/Robot-Exp-Platform/robot_behavior"
license = "Apache-2.0"
description = "a library for robot common behavior"
categories = ["science::robotics"]
keywords = ["robot", "robotics", "behavior", "roplat"]

[lib]
name = "robot_behavior"
crate-type = ["cdylib", "rlib"]

[profile.test]
opt-level = 3

[dependencies]
roplat = { version = "0.1.0", path = "../roplat" }
pyo3 = { version = "0.27.1", optional = true, features = [
    "extension-module",
    "multiple-pymethods",
] }
cxx = { version = "1.0.188", optional = true }
nalgebra = { version = "0.34.1", features = ["serde-serialize"] }
serde = { version = "1.0.228", features = ["derive", "alloc"] }
serde_with = "3.16.0"
serde_json = "1.0.145"
thiserror = "2.0.17"
anyhow = "1.0.100"
paste = "1.0.15"
pipe-trait = "0.4.0"
typenum = "1.19.0"
futures = "0.3"

[build-dependencies]
cxx-build = "1.0.188"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.177"
plotters = "0.3.7"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "winbase"] }
plotters = "0.3.7"

[features]
default = []
ffi = []
to_c = ["ffi"]
to_cxx = ["ffi", "cxx"]
to_py = ["ffi", "pyo3"]
